# degis

./: .gitignore  .venv  01_data_extraction_and_training.ipynb  02_image_generation_ipadapter.ipynb  02b_image_generation_ipadapter_xl.ipynb  DEGIS_IP_ADAPTER_CHANGES.md  README.md  README_PACKAGE.md  SETUP_GUIDE.md  colour_train_main.py  config.py  demo_data_extraction_and_training.ipynb  demo_inferencing.ipynb  download_images.ipynb  edge_train_main.py  efficiency_logs.csv  env_setup.py  evaluate.ipynb  evaluate.py  example_usage.py  histograms_visual.ipynb  inferencing_demo.ipynb  layout_visual.ipynb  main.py  new_clip_embeddings.ipynb  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_kernel.py  setup_server.sh  setup_server_fixed.sh  summarize_runs.py  test_degis_clean_complete.py  test_degis_clean_data.py  test_degis_clean_notebook.py  test_degis_clean_shared.py  test_degis_clean_shared_structure.py  test_degis_clean_structure.py  test_degis_clean_training.py  (+3 more)
assets/clip/: clip_meta.json
assets/config/: hist_config.json
assets/costs/: cost_hcl514.npy  cost_lab514.npy  cost_rgb512.npy
assets/edges/: meta.json  samples.npy
data/: adimagenet_manifest.csv  dataset.py
degis/: __init__.py  config.py
degis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
degis/cli/: __init__.py  generate_embeddings.py  generate_features.py  train_color.py  train_edge.py
degis/config/: __init__.py
degis/core/: __init__.py  embeddings.py  emd_generation.py  features.py  generation.py  training.py
degis/data/: dataset.py
degis/features/: clip_embeddings.py  clip_embeddings_xl_hf.py
degis/inference/: __init__.py  core_generation.py  emd_generation.py  generation.py  generation_functions.py
degis/models/: color_heads.py  train_color.py
degis/models_config/: __init__.py  models.py
degis/shared/: __init__.py  clip_vit_bigg14.py  clip_vit_h14.py  config.py
degis/shared/image_features/: __init__.py  (+2 more)
degis/training/: __init__.py  batch_embeddings.py  training.py
degis/utils/: __init__.py  auto_setup.py  emd_generation.py  evaluate.py  image_utils.py  model_downloader.py  model_manager.py
degis_clean/: __init__.py
degis_clean/data/: dataset.py
degis_clean/inference/: __init__.py  emd_generation.py  generation.py  visualization.py
degis_clean/shared/: __init__.py  clip_embeddings_xl_hf.py  clip_vit_h14.py  embeddings.py
degis_clean/training/: __init__.py  features.py  training.py
docs/: DEGIS_IP_ADAPTER_CHANGES.md  IP_ADAPTER_PATCH_README.md  SETUP_GUIDE.md  clip_config.json  inference_sequence_diagram.md  training_inference_workflow.md  training_sequence_diagram.md
evaluation_runs/: metrics.csv
evaluation_runs/coco_base_hcl514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/coco_base_lab514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/coco_base_rgb512_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/coco_xl_hcl514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/coco_xl_lab514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/coco_xl_rgb512_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/laion_5m_base_hcl514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/laion_5m_base_lab514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/laion_5m_base_rgb512_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/laion_5m_xl_hcl514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/laion_5m_xl_lab514_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
evaluation_runs/laion_5m_xl_rgb512_tk20_b4096/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
features/: clip_embeddings.py  clip_embeddings_xl.py  clip_embeddings_xl_hf.py  color_histograms.py  edge_maps.py
ip_adapter_patch/: README.md  __init__.py  degis_ip_adapter_patch.py  ip_adapter_monkey_patch.py
model-cache/: .keep  README.md
models/: edge_heads.py  heads.py  train.py  train_color.py  train_edge.py
runs/best_laion_5m_rgb512_tk40_b4096-20250905-002521/: best_summary.json  metrics.csv  run_meta.json
runs/coco_hcl514_tk100_b4096-20250828-181500/: best_summary.json  metrics.csv  run_meta.json
runs/coco_lab514_tk100_b4096-20250828-181025/: best_summary.json  metrics.csv  run_meta.json
runs/coco_rgb512_tk100_b4096-20250828-183955/: best_summary.json  metrics.csv  run_meta.json
runs/color_hcl514_tk100_b4096-20250906-202254/: best_summary.json  metrics.csv  run_meta.json
runs/color_hcl514_tk100_b4096-20250906-203115/: best_summary.json  metrics.csv  run_meta.json
runs/color_hcl514_tk100_b4096-20250906-204242/: best_summary.json  metrics.csv  run_meta.json
runs/color_hcl514_tk100_b4096-20250911-082634/: best_summary.json  metrics.csv  run_meta.json
runs/color_hcl514_tk100_b4096-20250919-133617/: best_summary.json  checkpoint_hashes.json  hparams.yaml  metrics.csv  run_meta.json
runs/color_rgb512_tk20_b128-20250907-020145/: best_summary.json  metrics.csv  run_meta.json
runs/color_rgb512_tk20_b4096-20250907-123124/: best_summary.json  metrics.csv  run_meta.json
runs/color_rgb512_tk20_b64-20250907-013948/: best_summary.json  metrics.csv
runs/consis_2_color_rgb512_tk20_b4096-20250907-110430/: best_summary.json  metrics.csv  run_meta.json
runs/hcl514_tk100_b4096-20250827-222013/: best_summary.json  metrics.csv  run_meta.json
scripts/: download_images.ipynb  download_models.py  setup_notebooks.py
utils/: summarize_runs.py
(+72 files in other folders)
