[project]
name = "degis"
version = "0.1.0"
description = "Disentangled Embeddings Guided Synthesis"
authors = [
    {name = "Ahmed Sherif", email = "you@example.com"}
]
readme = "README_PACKAGE.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0", 
    "torchaudio==2.8.0",
    "tqdm==4.67.1",
    "numpy==2.2.6",
    "pandas==2.3.2",
    "matplotlib==3.10.5",
    "opencv-python-headless==4.12.0.88",
    "scikit-learn==1.7.1",
    "scikit-image==0.25.2",
    "einops==0.8.1",
    "ftfy==6.3.1",
    "regex==2025.7.34",
    "requests==2.32.5",
    "Pillow==11.3.0",
    "diffusers==0.35.1",
    "transformers==4.55.3",
    "accelerate==1.10.0",
    "pyparsing==3.1.1",
    "geomloss==0.2.6",
    "psutil==7.0.0",
    "pyyaml==6.0.2",
    "safetensors==0.6.2",
    "huggingface-hub==0.34.4",
    "ip-adapter==0.1.0",
    "open-clip-torch @ git+https://github.com/mlfoundations/open_clip.git@8480ac990f0eda35fa21a0757188acebb11a36e6",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "notebook",
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
degis-embeddings = "degis.cli.generate_embeddings:main"
degis-features = "degis.cli.generate_features:main"
degis-train-color = "degis.cli.train_color:main"
degis-train-edge = "degis.cli.train_edge:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["degis*"]
exclude = ["tests*", "runs*", "*.ipynb", "*.pyc", "__pycache__*"]

[tool.poetry]
name = "degis"
version = "0.1.0"
description = "Disentangled Embeddings Guided Synthesis"
authors = ["Ahmed Sherif <you@example.com>"]
readme = "README_PACKAGE.md"
packages = [{include = "degis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "2.8.0"
torchvision = "0.23.0"
torchaudio = "2.8.0"
tqdm = "4.67.1"
numpy = "2.2.6"
pandas = "2.3.2"
matplotlib = "3.10.5"
opencv-python-headless = "4.12.0.88"
scikit-learn = "1.7.1"
scikit-image = "0.25.2"
einops = "0.8.1"
ftfy = "6.3.1"
regex = "2025.7.34"
requests = "2.32.5"
Pillow = "11.3.0"
diffusers = "0.35.1"
transformers = "4.55.3"
accelerate = "1.10.0"
pyparsing = "3.1.1"
geomloss = "0.2.6"
ip-adapter = {git = "https://github.com/Ahmed-Sherif-ASA/IP-Adapter.git", branch = "main"}
psutil = "7.0.0"
pyyaml = "6.0.2"
safetensors = "0.6.2"
huggingface-hub = "0.34.4"
open-clip-torch = {git = "https://github.com/mlfoundations/open_clip.git", rev = "8480ac990f0eda35fa21a0757188acebb11a36e6"}

[tool.poetry.group.dev.dependencies]
jupyter = "*"
jupyterlab = "*"
ipykernel = "*"
notebook = "*"
pytest = "*"
black = "*"
flake8 = "*"

[tool.poetry.scripts]
degis-embeddings = "degis.cli.generate_embeddings:main"
degis-features = "degis.cli.generate_features:main"
degis-train-color = "degis.cli.train_color:main"
degis-train-edge = "degis.cli.train_edge:main"